Revert usage of Map.copyOf